--- a/views/student/course/2_Datatype_and_Variable-course.ejs
+++ b/views/student/course/2_Datatype_and_Variable-course.ejs
@@ -71,51 +71,50 @@
                 <iframe width="100%" height="600" src="https://www.youtube.com/embed/ddbidsl_9Fc?si=ISnWVOhHQEgCnN9A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 
         <br><br>
+        <!-- Knowledge -->
         <div class="game">
-            <!--* ข้อ 1 *-->
+            <!--* ข้อ 1 K1 *-->
             <div class="gamecontent">
                 <div  class="question">
-                <h5>ข้อมูลประเภท float ในภาษา C ใช้เก็บข้อมูลชนิดใด</h5>
+                <h5>ข้อมูลประเภท int ในภาษา C ใช้เก็บข้อมูลชนิดใด</h5>
                 <br><br><p id="demo1"> </p>
                 </div>
                 <div class="ans">
                     <div>
                     <div class="btn">
-                        <p id="demo" class="button" onclick="myFunctionW2()">10</p>  
-                        <p id="demo" class="button" onclick="myFunctionT1()">26.83</p>                                                                      
+                        <p id="demo" class="button" onclick="myFunctionW1()">จำนวนทศนิยม</p>  
+                        <p id="demo" class="button" onclick="myFunctionT1()">จำนวนเต็ม</p>                                                                      
                     </div>
                     <div class="btn">
-                        <p id="demo" class="button" onclick="myFunctionW1()">“Hello World”</p>   
-                        <p id="demo" class="button" onclick="myFunctionW1()"> A </p>    
+                        <p id="demo" class="button" onclick="myFunctionW1()">ข้อความ</p>   
+                        <p id="demo" class="button" onclick="myFunctionW1()">ตัวอักขระ</p>    
                     </div></div>
                     
                 </div>
             </div>
             
-            <!--* ข้อ 2 *-->
+            <!--* ข้อ 2 K2 *-->
             <div class="gamecontent">
                 <div  class="question">
-                <h5>ข้อใดประกาศตัวแปรประเภท double ในภาษา C ได้ถูกต้อง</h5>
+                <h5>ข้อมูลประเภท float ในภาษา C ใช้เก็บข้อมูลชนิดใด</h5>
                 <br><br><p id="demo2"> </p>
                 </div>
                 <div class="ans">
                     <div>
                     <div class="btn">
-                        <p id="demo" class="button" onclick="myFunctionW2()"> float x = 10.5; </p>    
-                        <p id="demo" class="button" onclick="myFunctionW2()">int x = 10.5;</p>                                                                      
+                        <p id="demo" class="button" onclick="myFunctionW2()">10</p>    
+                        <p id="demo" class="button" onclick="myFunctionW2()">“Hello World”</p>                                                                      
                     </div>
                     <div class="btn">
-                        <p id="demo" class="button" onclick="myFunctionT2()">double x = 10.5;</p>   
-                    </div>
-                    <div class="btn">
-                        <p id="demo" class="button" onclick="myFunctionW2()">char x = 10.5;</p>   
+                        <p id="demo" class="button" onclick="myFunctionT2()">26.83</p> 
+                        <p id="demo" class="button" onclick="myFunctionW2()">A</p>  
                     </div>
                 </div>
                     
                 </div>
             </div>
 
-            <!--* ข้อ 3 *-->
+            <!--* ข้อ 3 K3 *-->
             <div class="gamecontent">
                 <div  class="question">
                 <h5>ข้อมูลประเภท char ในภาษา C ใช้เก็บข้อมูลชนิดใด</h5>
@@ -129,7 +128,76 @@
                     </div>
                     <div class="btn">
                         <p id="demo" class="button" onclick="myFunctionW3()">ข้อความ</p>  
-                        <p id="demo" class="button" onclick="myFunctionT3()">ตัวอักขระ </p>  
+                        <p id="demo" class="button" onclick="myFunctionT3()">ตัวอักขระ</p>  
+                    </div>
+                </div>
+                    
+                </div>
+            </div>
+
+        </div>
+
+        <div class="game">
+
+            <!--* ข้อ 4 K4 *-->
+            <div class="gamecontent">
+                <div  class="question">
+                <h5>ข้อใดประกาศตัวแปรประเภท double ในภาษา C ได้ถูกต้อง</h5>
+                <br><br><p id="demo4"> </p>
+                </div>
+                <div class="ans">
+                    <div>
+                    <div class="btn">
+                        <p id="demo" class="button" onclick="myFunctionW4()">char x = 10.5;</p>    
+                        <p id="demo" class="button" onclick="myFunctionW4()">int x = 10.5;</p>                                                                      
+                    </div>
+                    <div class="btn">
+                        <p id="demo" class="button" onclick="myFunctionT4()">double x = 10.5;</p>  
+                        <p id="demo" class="button" onclick="myFunctionW4()">float x = 10.5;</p>  
+                    </div>
+                </div>
+                    
+                </div>
+            </div>
+
+            <!--* ข้อ 5 K10*-->
+            <div class="gamecontent">
+                <div  class="question">
+                <h5>ตัวแปรที่ประกาศภายนอกฟังก์ชันและใช้งานได้ทั้งโปรแกรมนั้นเรียกว่าอะไร</h5>
+                <br><br><p id="demo5"> </p>
+                
+                </div>
+                <div class="ans">
+                    <div>
+                    <div class="btn">
+                        <p id="demo" class="button" onclick="myFunctionW5()">Function Variable</p>    
+                        <p id="demo" class="button" onclick="myFunctionW5()">Local Variable</p>                                                                      
+                    </div>
+                    <div class="btn">
+                        <p id="demo" class="button" onclick="myFunctionT5()">Global Variable</p>  
+                        <p id="demo" class="button" onclick="myFunctionW5()">ถูกทุกข้อ </p>  
+                    </div>
+                </div>
+                    
+                </div>
+            </div>
+
+            <!--* ข้อ 6 K9*-->
+            <div class="gamecontent">
+                <div class="question">
+                <h5>ตัวแปรที่ประกาศภายในฟังก์ชันและใช้งานได้เฉพาะภายในฟังก์ชันนั้นเรียกว่าอะไร</h5>
+                <br><br><p id="demo6"> </p>
+                
+                </div>
+                <div class="ans">
+                    <div>
+                    <div class="btn">
+                        <p id="demo" class="button" onclick="myFunctionW6()">Global Variable</p>    
+                        <p id="demo" class="button" onclick="myFunctionT6()">Local Variable</p>                                                                      
+                    </div>
+                    <div class="btn">
+                        <p id="demo" class="button" onclick="myFunctionW6()">Function Variable</p>  
+                        <p id="demo" class="button" onclick="myFunctionW6()">ถูกทุกข้อ </p>  
                     </div>
                 </div>
                     
@@ -137,28 +205,154 @@
             </div>
         </div>
 
+        <!-- Tracing -->
         <div class="game">
-            <!--* ข้อ 6 *-->
-            <div class="gamecontent-M">
-                <div  class="question">
-                <h5>ตัวแปรในการเขียนโปรแกรมคืออะไร</h5>
-                <br><br><p id="demo6"> </p>
-                
+
+            <!--* ข้อ 7 T1 *-->
+            <div class="gamecontent-T">
+                <div  class="question-T">
+                <h5>โปรแกรมนี้จะแสดงผลลัพธ์อะไร</h5>
+                <p id="demo7">#include < stdio.h > 
+                <br>int main() {
+                <br>&ensp;int a = 20;
+                <br>&ensp;int b = 30;
+                <br>&ensp;printf("%d", a = b);
+                <br>&ensp;return 0;
+                <br>}
+
+                </p>
                 </div>
                 <div class="ans">
                     <div>
                     <div class="btn">
-                        <p id="demo" class="button" onclick="myFunctionT6()">สถานที่เก็บข้อมูล</p>    
-                        <p id="demo" class="button" onclick="myFunctionW6()">ชื่อที่ใช้เรียกโปรแกรม</p>                                                                      
+                        <p id="demo" class="button" onclick="myFunctionW7()">20</p>    
+                        <p id="demo" class="button" onclick="myFunctionT7()">30</p>                                                                      
                     </div>
                     <div class="btn">
-                        <p id="demo" class="button" onclick="myFunctionW6()">คำสั่งในโปรแกรม</p>  
-                        <p id="demo" class="button" onclick="myFunctionW6()">ข้อความแสดงผล </p>  
+                        <p id="demo" class="button" onclick="myFunctionW7()">0</p>  
+                        <p id="demo" class="button" onclick="myFunctionW7()">ไม่มีผลลัพธ์</p>  
                     </div>
                 </div>
                     
                 </div>
             </div>
+
+            <!--* ข้อ 8 K10*-->
+            <div class="gamecontent-T">
+                <div  class="question-T">
+                <h5>โปรแกรมนี้จะแสดงผลลัพธ์อะไร</h5>
+                <p id="demo8">#include < stdio.h >
+                <br>#define MAX_VALUE 80
+                <br>int main() {
+                <br>&ensp;const int x = 8;
+                <br>&ensp;const char z = 'C';
+                <br>&ensp;z = 'A';
+                <br>&ensp;printf("%d, ", x);
+                <br>&ensp;printf("%c, ", z);
+                <br>&ensp;printf("%d", MAX_VALUE);
+                <br>&ensp;return 0;
+                <br>}
+
+                </p>
+                
+                </div>
+                <div class="ans">
+                    <div>
+                    <div class="btn">
+                        <p id="demo" class="button" onclick="myFunctionW8()">8, C, 80</p>    
+                        <p id="demo" class="button" onclick="myFunctionW8()">10, A, 100</p>                                                                      
+                    </div>
+                    <div class="btn">
+                        <p id="demo" class="button" onclick="myFunctionW8()">8, C, 100</p>  
+                        <p id="demo" class="button" onclick="myFunctionT8()">Error</p>  
+                    </div>
+                </div>
+                    
+                </div>
+            </div>  
+        </div>
+
+        <!-- Explaining -->
+        <div class="game">
+
+            <!--* ข้อ 9 E8 *-->
+            <div class="gamecontent-E">
+                <div  class="question-E">
+                <h5>ข้อใดอธิบายการทำงานของโค้ดนี้ได้ถูกต้อง</h5>
+                <p id="demo9">#include < stdio.h > 
+                <br>#define MAX_VALUE 120
+                <br>int main() {
+                <br>&ensp;const int x = 30;
+                <br>&ensp;const char z = 'C';
+                <br>&ensp;z = 'A';
+                <br>&ensp;printf("%d, ", x);
+                <br>&ensp;printf("%c, ", z);
+                <br>&ensp;printf("%d", MAX_VALUE);
+                <br>&ensp;return 0;
+                <br>}
+
+                </p>
+                </div>
+                <div class="ans">
+                    <div>
+                    <div class="btn">
+                        <p id="demo" class="button" onclick="myFunctionW9()">โปรแกรมกำหนดค่าคงที่ MAX_VALUE เป็น 120, ประกาศตัวแปรค่าคงที่ x เป็น 30 และตัวแปรค่าคงที่ z เป็น 'C' แล้วแสดงผลลัพธ์ 30, C, 120</p>    
+                    </div>
+                    <div class="btn">
+                        <p id="demo" class="button" onclick="myFunctionW9()">โปรแกรมจะเกิดข้อผิดพลาดในการคอมไพล์เนื่องจากไม่สามารถกำหนดค่าใหม่ให้กับ MAX_VALUE</p>  
+                    </div>
+                    <div class="btn">
+                        <p id="demo" class="button" onclick="myFunctionT9()">โปรแกรมจะเกิดข้อผิดพลาดในการคอมไพล์เนื่องจากพยายามเปลี่ยนค่าตัวแปร z ที่เป็น const</p>  
+                    </div>
+                    <div class="btn">
+                        <p id="demo" class="button" onclick="myFunctionW9()">โปรแกรมจะเกิดข้อผิดพลาดในการคอมไพล์เนื่องจากไม่สามารถกำหนดค่าใหม่ให้กับ MAX_VALUE</p>  
+                    </div>
+                </div>
+                    
+                </div>
+            </div>
+
+        </div>
+
+        <div class="game">
+
+            <!--* ข้อ 10 E7*-->
+            <div class="gamecontent-E">
+                <div  class="question-E">
+                <h5>ข้อใดอธิบายการทำงานของโค้ดนี้ได้ถูกต้อง</h5>
+                <p id="demo10">#include < stdio.h >
+                <br>#define MAX_VALUE 100
+                <br>int main() {
+                <br>&ensp;const int x = 80;
+                <br>&ensp;char z = 'C';
+                <br>&ensp;z = 'A';
+                <br>&ensp;printf("%d, ", x);
+                <br>&ensp;printf("%c, ", z);
+                <br>&ensp;printf("%d", MAX_VALUE);
+                <br>&ensp;return 0;
+                <br>}
+
+                </p>
+                
+                </div>
+                <div class="ans">
+                    <div>
+                    <div class="btn">
+                        <p id="demo" class="button" onclick="myFunctionW10()">โปรแกรมกำหนดค่าคงที่ MAX_VALUE เป็น 100, ประกาศตัวแปรค่าคงที่ x เป็น 80 และ z เป็น 'C' แล้วแสดงผลลัพธ์ 80, C, 100</p>    
+                    </div>
+                    <div class="btn">
+                        <p id="demo" class="button" onclick="myFunctionT10()">โปรแกรมกำหนดค่าคงที่ MAX_VALUE เป็น 100, ประกาศตัวแปรค่าคงที่ x เป็น 80 และ z เป็น 'A' แล้วแสดงผลลัพธ์ 80, A, 100</p> 
+                    </div>
+                    <div class="btn">
+                        <p id="demo" class="button" onclick="myFunctionW10()">โปรแกรมกำหนดค่าคงที่ MAX_VALUE เป็น 100, ประกาศตัวแปรค่าคงที่ x เป็น 80 และ z เป็น 'C', แต่ไม่แสดงผลลัพธ์ใดๆ</p>    
+                    </div>
+                    <div class="btn">
+                        <p id="demo" class="button" onclick="myFunctionW10()">โปรแกรมกำหนดค่าคงที่ MAX_VALUE เป็น 100, ประกาศตัวแปรค่าคงที่ x และ z ทั้งคู่เป็น 80 แล้วแสดงผลลัพธ์ 80, A, 100</p> 
+                    </div>
+                </div>
+                    
+                </div>
+            </div>  
         </div>
 
 
