--- a/views/student/pretest/3_Input_and_Output-pretest.ejs
+++ b/views/student/pretest/3_Input_and_Output-pretest.ejs
@@ -752,5 +752,5 @@
         </div>
     </div>
 </div>
-<!--<script src="javascripts/lv3/3_Input_and_Output.js"></script>-->
+<script src="javascripts/lv3/3_Input_and_Output.js"></script>
 <script src="javascripts/compilerStyle.js"></script>
