--- a/views/student/quiz/3_Input_and_Output-quiz.ejs
+++ b/views/student/quiz/3_Input_and_Output-quiz.ejs
@@ -752,5 +752,5 @@
         </div>
     </div>
 </div>
-<!--<script src="javascripts/lv3/3_Input_and_Output.js"></script>-->
+<script src="javascripts/lv3/3_Input_and_Output.js"></script>
 <script src="javascripts/compilerStyle.js"></script>
