--- a/views/student/quiz/3_Input_and_Output-quiz.ejs
+++ b/views/student/quiz/3_Input_and_Output-quiz.ejs
@@ -541,7 +541,7 @@
                     (ส่งเป็น Link URL ของ OnlineGDB เมื่อเขียนโค้ดเสร็จ -> กด Share -> Copy ช่อง Share Code)
                 </p>
                 <div  style="margin: 20px;">
-                    <iframe src="https://drive.google.com/file/d/15JtyzFIcjkP-t5ioDrPaece38SmBv4No/preview" width="100%" height="600" allow="autoplay"></iframe>
+                    <iframe src="<%= ADRI1  %> " width="100%" height="600" allow="autoplay"></iframe>
                 </div>
                     <div class="form-group">
                         <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
@@ -571,7 +571,7 @@
                     (ส่งเป็น Link URL ของ OnlineGDB เมื่อเขียนโค้ดเสร็จ -> กด Share -> Copy ช่อง Share Code)
                 </p>
                 <div  style="margin: 20px;">
-                    <iframe src="https://drive.google.com/file/d/1osQnRL5Jqkc4xR3FHW5vw17JXqgGcfAW/preview" width="100%" height="600" allow="autoplay"></iframe>                <div class="form-group">
+                    <iframe src="<%= ADRI2  %> " width="100%" height="600" allow="autoplay"></iframe>                <div class="form-group">
                 </div>    
                 <div class="form-group">
                     <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
@@ -603,7 +603,7 @@
                     (ส่งเป็น Link URL ของ OnlineGDB เมื่อเขียนโค้ดเสร็จ -> กด Share -> Copy ช่อง Share Code)
                 </p>
                 <div  style="margin: 20px;">
-                    <iframe src="https://drive.google.com/file/d/1KUivgO6uXy1YT9iw0aNTGeDNyEiz_CPT/preview" width="100%" height="600" allow="autoplay"></iframe>                    <div class="group2">
+                    <iframe src="<%= ADRI3  %> " width="100%" height="600" allow="autoplay"></iframe>                    <div class="group2">
                 </div>
                 <div class="form-group">
                     <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
@@ -635,7 +635,7 @@
                     (ส่งเป็น Link URL ของ OnlineGDB เมื่อเขียนโค้ดเสร็จ -> กด Share -> Copy ช่อง Share Code)
                 </p>
                 <div  style="margin: 20px;">
-                    <iframe src="https://drive.google.com/file/d/1A4vDFT5BVSgZhqcdNHrdJXWvsFdA7fau/preview" width="100%" height="600" allow="autoplay"></iframe>                    <div class="group2">
+                    <iframe src="<%= ADRI4  %> " width="100%" height="600" allow="autoplay"></iframe>                    <div class="group2">
                 </div>
                 <div class="form-group">
                     <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
@@ -666,7 +666,7 @@
                     (ส่งเป็น Link URL ของ OnlineGDB เมื่อเขียนโค้ดเสร็จ -> กด Share -> Copy ช่อง Share Code)
                 </p>
                 <div  style="margin: 20px;">
-                    <iframe src="https://drive.google.com/file/d/1CnAqlO3WcbvGuckORcpOyhaWT_vQdgR9/preview" width="100%" height="600" allow="autoplay"></iframe>                <div class="form-group">
+                    <iframe src="<%= ADRI5  %> " width="100%" height="600" allow="autoplay"></iframe>                <div class="form-group">
                     </div>
                     <div class="form-group">
                         <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
@@ -752,5 +752,5 @@
         </div>
     </div>
 </div>
-<script src="javascripts/lv3/3_Input_and_Output.js"></script>
+<!--<script src="javascripts/lv3/3_Input_and_Output.js"></script>-->
 <script src="javascripts/compilerStyle.js"></script>
