--- a/views/student/layouts/course-middle.ejs
+++ b/views/student/layouts/course-middle.ejs
@@ -32,7 +32,7 @@
                                     <p class="wrapbox auto">
                                     <b>3. Input and Output</b>
                                     <br><a href="/course-Input_and_Output-pretest" style="color:black">แบบทดสอบก่อนเรียน</a>
-                                    <br><a href="/course-Input_Output" style="color:black">เนื้อหาบทเรียน</a>
+                                    <br><a href="/course-Input_and_Output" style="color:black">เนื้อหาบทเรียน</a>
                                     <br><a href="/course-Input_and_Output-quiz" style="color:black">แบบทดสอบหลังเรียน</a>
                                 </p>
                                 <p class="wrapbox auto">
