--- a/views/student/course/3_Input_and_Output-course.ejs
+++ b/views/student/course/3_Input_and_Output-course.ejs
@@ -57,7 +57,7 @@
             <div class="accordion" id="accordionParentSyntax">
                 <!--   Token -->
                 <div id="collapseIntroduce" class="accordion-collapse collapse show" data-bs-parent="#accordionParentSyntax">
-                    <h1 >Input Output</h1>
+                    <h1 >Input and Output</h1>
                     <!--   ## -->
                     <iframe src="https://drive.google.com/file/d/1eGc7LzAFBFGyFDa_BBvHZ_UpD8fywx6M/preview" width="100%" height="820" allow="autoplay"></iframe>
                     <h2>เรียน C Programming ฉบับคนไม่เคยเขียนโปรแกรม EP.5 อินพุต เอาต์อุต Input and Output 🔥</h2>
