--- a/views/student/quiz/4_Operators_and_Expressions-quiz.ejs
+++ b/views/student/quiz/4_Operators_and_Expressions-quiz.ejs
@@ -40,7 +40,7 @@
     <link rel='stylesheet' href='stylesheets/compiler_line.css' />
     <link rel='stylesheet' href='stylesheets/Drag_Drop.css' />
     <link rel="stylesheet" href="stylesheets/quiz.css">
-    <title>(Post-test) Input and Output</title>
+    <title>(Post-test) Operators and Expressions</title>
 </head>
 
 <body>
@@ -55,7 +55,7 @@
         <div class="accordion" id="accordionParentSyntax">
             <!--   Introduce -->
             <div id="collapseIntroduce" class="accordion-collapse collapse show" data-bs-parent="#accordionParentSyntax">
-                <h1>Input and Output (Post-test)</h1>
+                <h1>Operators and Expressions (Post-test)</h1>
                 
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><i href="/home" class="fa fa-home" style="font-size:16px"></i></li>
@@ -63,7 +63,7 @@
                 </ol>
 
 <%# START %> 
-<form action="/course-Input_and_Output-quiz/submit" method="post" autocomplete="off" >
+<form action="/course-Operators_and_Expressions-quiz/submit" method="post" autocomplete="off" >
 
     
 
