--- a/views/student/layouts/course-middle.ejs
+++ b/views/student/layouts/course-middle.ejs
@@ -37,7 +37,7 @@
                                 </p>
                                 <p class="wrapbox auto">
                                     <b>4. Operators and Expressions</b>
-                                    <br><a href="/course-Operators#Operators" style="color:black">เนื้อหาบทเรียน</a>
+                                    <br><a href="/course-Operators_and_Expressions" style="color:black">เนื้อหาบทเรียน</a>
                                     <!--<br><a href="/course-Operators-quiz" style="color:black">แบบทดสอบหลังเรียน</a>-->
                                 </p>
                                 <p class="wrapbox auto">
