--- a/views/student/course/3_Input_and_Output-course.ejs
+++ b/views/student/course/3_Input_and_Output-course.ejs
@@ -60,11 +60,11 @@
                     <h1 >Input and Output</h1>
                     <!--   ## -->
                     <iframe src="https://drive.google.com/file/d/1eGc7LzAFBFGyFDa_BBvHZ_UpD8fywx6M/preview" width="100%" height="820" allow="autoplay"></iframe>
-                    <h2>เรียน C Programming ฉบับคนไม่เคยเขียนโปรแกรม EP.5 อินพุต เอาต์อุต Input and Output 🔥</h2>
+                    <h2>Input and Output 🔥</h2>
                     <iframe width="100%" height="600" src="https://www.youtube.com/embed/PDbPLolQitk?si=NHLFvh16cyDdN6jH" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                    <h2>เรียน C Programming ฉบับคนไม่เคยเขียนโปรแกรม EP.7 Input (scanf vs gets) and Output (printf vs puts)🔥</h2>
+                    <h2>Input (scanf vs gets) and Output (printf vs puts)🔥</h2>
                     <iframe width="100%" height="600" src="https://www.youtube.com/embed/c8FwnP1TvNo?si=HVlNgIDERyAiPsR6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                    <h2>เรียน C Programming ฉบับคนไม่เคยเขียนโปรแกรม EP.8 ใช้งาน Math.h Library คำสั่งช่วยทางคณิตศาสตร์ 🔥</h2>
+                    <h2>ใช้งาน Math.h Library คำสั่งช่วยทางคณิตศาสตร์ 🔥</h2>
                     <iframe width="100%" height="600" src="https://www.youtube.com/embed/3rrtOFUHv9I?si=hlThjJG8_2uWP94o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <br ></div>
 
