--- a/views/student/pretest/3_Input_and_Output-pretest.ejs
+++ b/views/student/pretest/3_Input_and_Output-pretest.ejs
@@ -571,7 +571,7 @@
                 <div class="form-group">
                     <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
                         ทดสอบโค้ด</button>
-                    <textarea class="form-control" style="height: 400px;" placeholder="วางลิงก์ที่นี่" rows="4" cols="30" name="sendLink171" required></textarea>
+                    <textarea class="form-control" style="height: 400px;" placeholder="วางโค้ดที่นี่" rows="4" cols="30" name="sendLink171" required></textarea>
 
                 </div></div>
                 
@@ -599,7 +599,7 @@
                 <div class="form-group">
                     <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
                         ทดสอบโค้ด</button>
-                    <textarea class="form-control" style="height: 400px;" placeholder="วางลิงก์ที่นี่" rows="4" cols="30" name="sendLink181" required></textarea>
+                    <textarea class="form-control" style="height: 400px;" placeholder="วางโค้ดที่นี่" rows="4" cols="30" name="sendLink181" required></textarea>
 
                 </div></div>
 
@@ -622,12 +622,12 @@
                     19.1 (Deployment) ให้เขียนโปรแกรมคำนวณยอดขายสินค้ารวมภาษี โดยให้รับค่าตัวแปร และให้ใส่ค่าของตัวแปรดังนี้ ภาษี VAT = 7% ราคาสินค้า A = 400, B = 600, C = 800 (3 คะแนน)<br>
                 </p>
                 <div class="group2" style="margin: 20px;">
-                    <iframe src="h<%= ADRI4  %>" width="100%" height="600" allow="autoplay"></iframe>
+                    <iframe src="<%= ADRI4  %>" width="90%" height="600" allow="autoplay"></iframe>
                 
                 <div class="form-group">
                     <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
                         ทดสอบโค้ด</button>
-                    <textarea class="form-control" style="height: 400px;" placeholder="วางลิงก์ที่นี่" rows="4" cols="30" name="sendLink191" required></textarea>
+                    <textarea class="form-control" style="height: 400px;" placeholder="วางโค้ดที่นี่" rows="4" cols="30" name="sendLink191" required></textarea>
 
                 </div></div>
 
@@ -650,12 +650,12 @@
                     20.1 (Deployment) ให้เขียนโปรแกรมแสดงประวัติของผู้เรียน โดยให้รับค่าตัวแปร nickname, age, address (3 คะแนน)<br>
                 </p>
                 <div class="group2" style="margin: 20px;">
-                    <iframe src="<%= ADRI5  %>" width="100%" height="600" allow="autoplay"></iframe> 
+                    <iframe src="<%= ADRI5  %>" width="90%" height="600" allow="autoplay"></iframe> 
                     
                     <div class="form-group">
                         <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
                             ทดสอบโค้ด</button>
-                        <textarea class="form-control" style="height: 400px;" placeholder="วางลิงก์ที่นี่" rows="4" cols="30" name="sendLink201" required></textarea>
+                        <textarea class="form-control" style="height: 400px;" placeholder="วางโค้ดที่นี่" rows="4" cols="30" name="sendLink201" required></textarea>
     
                 </div></div>
 
