--- a/views/student/layouts/course-middle.ejs
+++ b/views/student/layouts/course-middle.ejs
@@ -42,24 +42,29 @@
                                 </p>
                                 <p class="wrapbox auto">
                                     <b>5. Selection Statement&Output </b>
-                                    <br><a href="/course-InputOutput#IO" style="color:black">เนื้อหาบทเรียน</a>
+                                    <br><a href="/course-Selection_Statement" style="color:black">เนื้อหาบทเรียน</a>
                                     <!--<br><a href="/course-InputOutput-quiz" style="color:black">แบบทดสอบหลังเรียน</a>-->
                                 </p>
                                 <p class="wrapbox auto">
                                     <b>6. Loop Statement </b>
-                                    <br><a href="/course-Selection_Statement#if_else" style="color:black"> เนื้อหาบทเรียน</a>
+                                    <br><a href="/course-Loop_Statement" style="color:black"> เนื้อหาบทเรียน</a>
                                     <!--<br><a href="/course-Selection_Statement-quiz" style="color:black">แบบทดสอบหลังเรียน</a>-->
                                 </p>
                                 <p class="wrapbox auto">
                                     <b>7. Array and String </b>
-                                    <br><a href="/course-Loop_Statement#for_Loop" style="color:black">เนื้อหาบทเรียน</a>
+                                    <br><a href="/course-Array_and_String" style="color:black">เนื้อหาบทเรียน</a>
                                     <!--<br><a href="/course-Loop_Statement-quiz" style="color:black">แบบทดสอบหลังเรียน</a>-->
                                 </p>
                                 <p class="wrapbox auto">
                                     <b>8. Functions </b>
-                                    <br><a href="/course-Pointers" style="color:black">เนื้อหาบทเรียน</a>
+                                    <br><a href="/course-Functions" style="color:black">เนื้อหาบทเรียน</a>
                                     <!--<br><a href="/course-Pointers-quiz" style="color:black">แบบทดสอบหลังเรียน</a>-->
                                 </p>
+                                <!--<p class="wrapbox auto">
+                                    <b>8. Functions </b>
+                                    <br><a href="/course-Pointers" style="color:black">เนื้อหาบทเรียน</a>
+                                    <br><a href="/course-Pointers-quiz" style="color:black">แบบทดสอบหลังเรียน</a>
+                                </p>-->
                                 
                               </div>
                         </div>
