--- a/views/student/course/2_Datatype_and_Variable-course.ejs
+++ b/views/student/course/2_Datatype_and_Variable-course.ejs
@@ -56,7 +56,10 @@
         <div id = "content" class="container">
             <br><br>
             <h2>บทที่ 2 Datatype and Variable</h2>
-    <!--   C Language -->
+            <a href="/course-Datatype_and_Variable#do_while_Loop" class="link-dark rounded collapsed"  type="button"  >
+                กดเพื่อไปยังแบบฝึกหัด
+                    </a>
+
             <div class="accordion" id="accordionParentSyntax">
                 <iframe src="https://drive.google.com/file/d/1qc9BXFUa_CnqbDlXgEb26_lj2bOlteC2/preview" width="100%" height="820" allow="autoplay"></iframe>
                 <br><br><h4>เริ่มต้นใช้งาน Online GDB และ Dev C++ IDE 🔥</h4>
@@ -71,6 +74,8 @@
                 <iframe width="100%" height="600" src="https://www.youtube.com/embed/ddbidsl_9Fc?si=ISnWVOhHQEgCnN9A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 
         <br><br>
+
+        <BR id="do_while_Loop">
         <!-- Knowledge -->
         <div class="game">
             <!--* ข้อ 1 K1 *-->
