--- a/views/student/course/3_Input_and_Output-course.ejs
+++ b/views/student/course/3_Input_and_Output-course.ejs
@@ -55,9 +55,9 @@
         <div id = "content" class="container">
     <!--   C Language -->
             <div class="accordion" id="accordionParentSyntax">
-                <!--   Token -->
+                <h1>บทที่ 3 Input and Output</h1>
                 <div id="collapseIntroduce" class="accordion-collapse collapse show" data-bs-parent="#accordionParentSyntax">
-                    <h1 >Input and Output</h1>
+                    
                     <!--   ## -->
                     <iframe src="https://drive.google.com/file/d/1eGc7LzAFBFGyFDa_BBvHZ_UpD8fywx6M/preview" width="100%" height="820" allow="autoplay"></iframe>
                     <h2>Input and Output 🔥</h2>
