--- a/views/student/course/4_Operators_and_Expressions-course.ejs
+++ b/views/student/course/4_Operators_and_Expressions-course.ejs
@@ -51,9 +51,9 @@
     <div class="content">
         <div id = "content" class="container">
             <div class="accordion" id="accordionParentSyntax">
-                <!--   Token -->
+                <h1>บทที่ 4 Operators and Expressions</h1>
                 <div id="collapseIntroduce" class="accordion-collapse collapse show" data-bs-parent="#accordionParentSyntax">
-                    <h1>Operators and Expressions</h1>
+                    
                     <!--   ## -->
                     <iframe src="https://drive.google.com/file/d/1j0oHgF7PPphQwAmSmUPYd015ihnEZToN/preview" width="100%" height="820" allow="autoplay"></iframe>
                     <h2>ตัวดำเนินการเดี่ยว Unary Operator</h2>
@@ -67,7 +67,7 @@
                     <h2>ลำดับการคำนวณทางคอมพิวเตอร์ Priority Expression</h2>
                     <iframe width="100%" height="600" src="https://www.youtube.com/embed/FU5J4nUJHl4?si=8Ccav1aTvKevaBvX" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
-                    <br ></div>
+                    
             
         <!-- 
         <button onclick="window.location.href='/course-Operators-quiz'" type="button" class="btn btn-outline-secondary btn-lg btn-block bg-light shadow" style="color:black" >
